Add Specification, Validation and Refactoring