@@ -1,5 +1,6 @@
 package com.zoi4erom.strategygame.security;
 
+import com.zoi4erom.strategygame.exception.JwtExpiredException;
 import com.zoi4erom.strategygame.utils.JwtTokenUtils;
 import io.jsonwebtoken.ExpiredJwtException;
 import jakarta.servlet.FilterChain;
@@ -7,9 +8,8 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.util.stream.Collectors;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -18,14 +18,16 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 @Component
 @RequiredArgsConstructor
-@Slf4j
 public class JwtRequestFilter extends OncePerRequestFilter {
 
 	private final JwtTokenUtils jwtTokenUtils;
 
 	@Override
-	protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
-	    FilterChain filterChain) throws ServletException, IOException {
+	protected void doFilterInternal(
+	    @NonNull HttpServletRequest request,
+	    @NonNull HttpServletResponse response,
+	    @NonNull FilterChain filterChain) throws ServletException, IOException {
+
 		String authHeader = request.getHeader("Authorization");
 		String username = null;
 		String jwt = null;
@@ -34,7 +36,7 @@ public class JwtRequestFilter extends OncePerRequestFilter {
 			try {
 				username = jwtTokenUtils.getUsername(jwt);
 			} catch (ExpiredJwtException e) {
-				log.debug("Время жизни токена вышло");
+				throw new JwtExpiredException("JWT Token Expired");
 			}
 		}
 		if (username != null
@@ -42,8 +44,7 @@ public class JwtRequestFilter extends OncePerRequestFilter {
 			UsernamePasswordAuthenticationToken token = new UsernamePasswordAuthenticationToken(
 			    username,
 			    null,
-			    jwtTokenUtils.getRoles(jwt).stream().map(SimpleGrantedAuthority::new).collect(
-				  Collectors.toList())
+			    jwtTokenUtils.getRoles(jwt).stream().map(SimpleGrantedAuthority::new).toList()
 			);
 			SecurityContextHolder.getContext().setAuthentication(token);
 		}
